unpackaged/main/default/objects/CareProgramEnrollee/CareProgramEnrollee.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>