unpackaged/main/default/objects/CareProgramEnrollee/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Care Program Enrollees</relationshipLabel>
    <relationshipName>Care_Program_Enrollees</relationshipName>
    <type>Lookup</type>
</CustomField>