unpackaged/main/default/objects/CareProgramEnrollee/fields/Care_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Program_Type__c</fullName>
    <formula>TEXT(CareProgram.Care_Program_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Program Type</label>
    <type>Text</type>
</CustomField>