unpackaged/main/default/objects/CareProgramEnrollee/fields/CasesClosed__c.field-meta.xml
<CustomField>
    <fullName>CasesClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CasesClosed?</label>
    <type>Checkbox</type>
</CustomField>