unpackaged/main/default/objects/CareProgramEnrollee/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date the navigation ends</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>