unpackaged/main/default/objects/CareProgramEnrollee/fields/Intake_Complete__c.field-meta.xml
<CustomField>
    <fullName>Intake_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intake Complete</label>
    <type>Checkbox</type>
</CustomField>