unpackaged/main/default/objects/CareProgramEnrollee/fields/isMyPatient__c.field-meta.xml
<CustomField>
    <fullName>isMyPatient__c</fullName>
    <formula>Patient_Navigator__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isMyPatient</label>
    <type>Checkbox</type>
</CustomField>