unpackaged/main/default/objects/CareProgramEnrollee/fields/Patient_Age__c.field-meta.xml
<CustomField>
    <fullName>Patient_Age__c</fullName>
    <formula>Account.PersonContact.HealthCloudGA__Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Age</label>
    <type>Text</type>
</CustomField>