unpackaged/main/default/objects/CareProgramEnrollee/fields/Patient_City__c.field-meta.xml
<CustomField>
    <fullName>Patient_City__c</fullName>
    <formula>Account.PersonContact.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient City</label>
    <type>Text</type>
</CustomField>