unpackaged/main/default/objects/CareProgramEnrollee/fields/Patient_email__c.field-meta.xml
<CustomField>
    <fullName>Patient_email__c</fullName>
    <label>Patient email</label>
    <type>Email</type>
</CustomField>