unpackaged/main/default/objects/CareProgramEnrollee/fields/Patient_Is_Insured__c.field-meta.xml
<CustomField>
    <fullName>Patient_Is_Insured__c</fullName>
    <formula>TEXT(Account.PersonContact.Is_Insured__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Is Insured?</label>
    <type>Text</type>
</CustomField>