unpackaged/main/default/objects/CareProgramEnrollee/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <formula>Account.PersonContact.FirstName + &apos; &apos;+   Account.PersonContact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Name</label>
    <type>Text</type>
</CustomField>