unpackaged/main/default/objects/CareProgramEnrollee/fields/Patient_Navigator__c.field-meta.xml
<CustomField>
    <fullName>Patient_Navigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Navigator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Care_Program_Enrollees1</relationshipName>
    <type>Lookup</type>
</CustomField>