unpackaged/main/default/objects/CareProgramEnrollee/fields/Patient_Navigator_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Navigator_Name__c</fullName>
    <formula>Patient_Navigator__r.FirstName &amp; &quot; &quot; &amp; Patient_Navigator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Navigator Name</label>
    <type>Text</type>
</CustomField>