unpackaged/main/default/objects/CareProgramEnrollee/fields/Patient_Navigator_User__c.field-meta.xml
<CustomField>
    <fullName>Patient_Navigator_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Navigator (DEPRECATED)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Care_Program_Enrollees</relationshipName>
    <type>Lookup</type>
</CustomField>