unpackaged/main/default/objects/CareProgramEnrollee/fields/Patient_State__c.field-meta.xml
<CustomField>
    <fullName>Patient_State__c</fullName>
    <formula>Account.PersonContact.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient State</label>
    <type>Text</type>
</CustomField>