unpackaged/main/default/objects/CareProgramEnrollee/fields/Patient_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Patient_Zip_Code__c</fullName>
    <formula>Account.PersonContact.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Zip Code</label>
    <type>Text</type>
</CustomField>