unpackaged/main/default/objects/CareProgramEnrollee/fields/PatientAccountUpdated__c.field-meta.xml
<CustomField>
    <fullName>PatientAccountUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PatientAccountUpdated?</label>
    <type>Checkbox</type>
</CustomField>