unpackaged/main/default/objects/CareProgramEnrollee/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date the Patient Navigator was assigned to the Enrollment</description>
    <inlineHelpText>The date the Patient Navigator was assigned to the Enrollment</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>