unpackaged/main/default/objects/CareProgramEnrollee/fields/TasksCompleted__c.field-meta.xml
<CustomField>
    <fullName>TasksCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TasksCompleted?</label>
    <type>Checkbox</type>
</CustomField>